dev/pickpro/pickpro-front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickpro-front
  namespace: pickpro
  labels:
    app: pickpro-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pickpro-front
  template:
    metadata:
      labels:
        app: pickpro-front
        app.kubernetes.io/part-of: soludev-workload
    spec:
      containers:
        - name: pickpro-front
          image: kaiohz/pickpro:pickpro-front-a550d5c0087b6473f87669038d721a5401030492
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "96Mi"
              cpu: "100m"
      volumes:
        - name: config-volume
          configMap:
            name: pickpro-front-config
      imagePullSecrets:
        - name: pickpro-docker-secret
